# blackboxprotobuf

./: .gitignore  README.md  pyproject.toml
blackboxprotobuf/: LICENSE  __init__.py  api.py  base.py
tests/: test.py
tests/example/: example.proto  example_pb2.py  test.py
tests/person/: person.proto  person_pb2.py  test.py
